# aoc_table

./: .gitignore  Cargo.toml  funcs.txt  generate_funcs.py  readme.md
ffi_gen/: Cargo.toml
ffi_gen/src/: lib.rs
hs_test/: ffi.hs  ffi_stub.h  lib.h  start_ghci.sh
src/: ffi.rs  lib.rs  main.rs  print.rs  table_gen.rs  task.rs
